# nilauth

./: CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  build.rs  config.sample.yaml  docker-compose.yml
.github/workflows/: cd-image.yml  ci.yml
migrations/: 20250318155602_add_subscriptions_table.sql  20250320164317_persist_invalid_transactions.sql  20250325204805_revocations_table.sql  20250328142149_add_revocations_expiration_time_index.sql  20250604161609_add_subscription_blind_module.sql  20250926173911_update_did_storage.sql  20251014111712_format_subscriber_dids.sql
nilchaind/config/: addrbook.json  config.toml  genesis.json  node_key.json  priv_validator_key.json
nilchaind/config/gentx/: gentx-7aa7fe3ef81c0e8d13d87c4e1f27608e5f683882.json
scripts/: create-nuc.py
src/: args.rs  auth.rs  cleanup.rs  config.rs  docs.rs  lib.rs  main.rs  metrics.rs  run.rs  signed.rs  state.rs  tests.rs  time.rs
src/db/: account.rs  mod.rs  revocations.rs  subscriptions.rs
src/routes/: about.rs  health.rs  mod.rs
src/routes/nucs/: create.rs
src/routes/payments/: cost.rs  mod.rs  validate.rs
src/routes/revocations/: lookup.rs  mod.rs  revoke.rs
src/routes/subscriptions/: status.rs
src/services/: mod.rs  prices.rs  subscription_cost.rs  token_price.rs
tests/: integration.rs  setup.rs
