[package]
name = "nilauth"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = "0.8"
axum-prometheus = "0.8"
chrono = "0.4"
clap = { version = "4.5", features = ["derive", "env"] }
config = { version = "0.15", default-features = false, features = ["yaml"] }
convert_case = "0.8"
hex = { version = "0.4", features = ["serde"] }
itertools = "0.14"
metrics = "0.24"
nilauth-client = { git = "https://github.com/NillionNetwork/nilvm", rev = "7d8aa9c96f681047107b11f45d2bffd1b95bcd19" }
nillion-nucs = { git = "https://github.com/NillionNetwork/nilvm", rev = "7d8aa9c96f681047107b11f45d2bffd1b95bcd19" }
nillion-chain-client = { git = "https://github.com/NillionNetwork/nilvm", rev = "7d8aa9c96f681047107b11f45d2bffd1b95bcd19" }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
rust_decimal = "1.37"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.12"
strum = { version = "0.27", features = ["derive"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "chrono"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }
tokio = { version = "1.44", features = ["rt-multi-thread", "macros", "time"] }

[dev-dependencies]
libc = "0.2"
mockall = "0.13"
rand = "0.8"
rstest = { version = "0.25", default-features = false }
testcontainers-modules = { version = "0.11", features = ["blocking", "postgres"] }

