[package]
name = "nilauth"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = "0.8"
axum-prometheus = "0.8"
chrono = "0.4"
clap = { version = "4.5", features = ["derive", "env"] }
config = { version = "0.15", default-features = false, features = ["yaml"] }
convert_case = "0.8"
hex = { version = "0.4", features = ["serde"] }
itertools = "0.14"
metrics = "0.24"
nilauth-client = { git = "https://github.com/NillionNetwork/nilauth-client-rs", rev = "61e69801ec00902be38beacbaebd1a0371bccb11" }
nillion-nucs = { git = "https://github.com/NillionNetwork/nuc-rs", rev = "687657acd08f2543e5c0d75e910eb9f1b1152d00" }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
rust_decimal = "1.37"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.12"
strum = { version = "0.27", features = ["derive"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "chrono"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }
tokio = { version = "1.44", features = ["rt-multi-thread", "macros", "time", "signal"] }
tower-http = { version = "0.6", features = ["cors"] }

[dev-dependencies]
libc = "0.2"
mockall = "0.13"
rand = "0.8"
rstest = { version = "0.25", default-features = false }
testcontainers-modules = { version = "0.11", features = ["blocking", "postgres"] }

